--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "End-to-end UI automation framework using Playwright + TypeScript, designed to run locally in Jenkins CI.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "playwright test",
+    "test:headed": "playwright test --headed",
+    "report": "playwright show-report"
   },
   "keywords": [],
   "author": "",
